--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -146,11 +146,7 @@ p {
     &__login {
         cursor: pointer;
         margin-left: 39px;
-        
         @media(max-width: 516px) {
-            display: block;
-            padding: 0;
-            border: none;
             margin-left: 0px;
         }
         &-item {
@@ -160,6 +156,12 @@ p {
             color: $accent-color;
             text-decoration: none;
             font-size: 18px;
+            @media(max-width: 516px) {
+                display: block;
+                padding: 0;
+                border: none;
+                margin-left: 0px;
+            }
             &:hover {
                 background-color: #5584ff;
                 color: #fff;
